// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`adds JBrowse1 connection from a url 1`] = `
[
  {
    "connectionId": "JBrowse1Connection-1",
    "dataDirLocation": {
      "locationType": "UriLocation",
      "uri": "https://mysite.com/jbrowse/data",
    },
    "name": "JBrowse1Connection-1",
    "type": "JBrowse1Connection",
  },
]
`;

exports[`adds a custom connection with user set fields 1`] = `
[
  {
    "assemblyNames": [
      "testAssembly",
    ],
    "connectionId": "newConnectionId",
    "locationType": "UriLocation",
    "name": "newName",
    "type": "newType",
    "url": {
      "uri": "https://mysite.com/custom",
    },
  },
]
`;

exports[`adds an UCSCTrackHubConnection connection from a url 1`] = `
[
  {
    "connectionId": "UCSCTrackHubConnection-1",
    "hubTxtLocation": {
      "locationType": "UriLocation",
      "uri": "https://mysite.com/data/hub.txt",
    },
    "name": "UCSCTrackHubConnection-1",
    "type": "UCSCTrackHubConnection",
  },
]
`;

exports[`fails if data directory is not an url 1`] = `
"Error: Unknown command "add-connection ."
Available commands: create, add-assembly, add-track, text-index, admin-server, upgrade, make-gfa-db, make-pif, sort-gff, sort-bed, add-connection, add-track-json, remove-track, set-default-session"
`;

exports[`fails if no config file 1`] = `"Error: Error: ENOENT: no such file or directory, open './config.json'"`;

exports[`fails to add a duplicate connection 1`] = `"Error: Cannot add connection with connectionId newConnectionId, a connection with that connectionId already exists"`;

exports[`can use --force to overwrite an existing connection 1`] = `
[
  {
    "connectionId": "newConnectionId",
    "locationType": "UriLocation",
    "name": "newConnectionId",
    "type": "custom",
    "url": {
      "uri": "https://mysite.com/custom",
    },
  },
]
`;
